syntax = "proto3";

package stats.service.collector;

import "messages/recommendations.proto";

service RecommendationsController {
  rpc GetRecommendationsForUser(UserPredictionsRequestProto)
      returns (stream RecommendedEventProto);

  rpc GetSimilarEvents(SimilarEventsRequestProto)
      returns (stream RecommendedEventProto);

  rpc GetInteractionsCount(InteractionsCountRequestProto)
      returns (stream RecommendedEventProto);
}